--- a/package.json
+++ b/package.json
@@ -2,20 +2,30 @@
 	"name" 			: "ejemploMEAN",
 	"version"		: "0.0.1",
 	"description"	: "app con MEAN",
-	"main"			: "server.js",
+	"main"			: "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
 	"author"		: "Rodrigo Trejo rodrigo_tregue@hotmail.com",
-  	"repository": {
-    	"type": "git",
-    	"url": "https://github.com/RodrigoTrejo/ejem.git"
-  	},
-	"dependencies"	: {
-		"express"    : "~3.4.4",
-    	"mongoose"   : "~3.6.2",
-    	"node-gyp"	 : "0.10.*",
-    	"socket.io"	 : "0.9.*"
+  "dependencies"  : {
+      "express"    : "4.13.3",
+      "mongoose"   : "~3.6.2",
+      "node-gyp"   : "0.10.*",
+      "socket.io"  : "0.9.*"
+  },
+  "engines"   : {
+      "node"       : "0.12.7",
+      "npm"        : "1.3.*"
+  },
+	"repository": {
+  	"type": "git",
+  	"url": "https://github.com/RodrigoTrejo/ejem.git"
 	},
-	"engines"		: {
-    	"node"       : "0.10.*",
-    	"npm"        : "1.3.*"
-  	}
+  "keywords": [
+    "node",
+    "heroku",
+    "express",
+    "mongoose"
+  ]
+	
 }
